[package]
name = "comply"
version = "0.1.0"
edition = "2021"
description = "Publishes ACSC ISM controls so they may be integrated into a system"
license = "Apache-2.0"

[dependencies]
roxmltree  =  "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web  = "4" 
actix-files = "0.6.2"
